force-app/main/default/objects/Account/fields/Account_Activated__c.field-meta.xml
<CustomField>
    <fullName>Account_Activated__c</fullName>
    <description>Set by HubSpot workflow when the Actively Worked marker changes to TRUE:
https://app.hubspot.com/workflows/9021803/platform/flow/558060049/edit</description>
    <label>Account Activated Date</label>
    <type>Date</type>
</CustomField>