force-app/main/default/objects/Account/fields/Account_Deactivated_Date__c.field-meta.xml
<CustomField>
    <fullName>Account_Deactivated_Date__c</fullName>
    <description>Set in a HubSpot workflow on RoE expiration date - Actively Worked marker turning FALSE: https://app.hubspot.com/workflows/9021803/platform/flow/558498974/edit/actions/1/set-property</description>
    <label>Account Deactivated Date</label>
    <type>Date</type>
</CustomField>