force-app/main/default/objects/Account/fields/Account_Handed_Over__c.field-meta.xml
<CustomField>
    <fullName>Account_Handed_Over__c</fullName>
    <label>Account Handed Over</label>
    <length>10</length>
    <type>Text</type>
</CustomField>