force-app/main/default/objects/Account/fields/Account_Handover_Created__c.field-meta.xml
<CustomField>
    <fullName>Account_Handover_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked by a flow when an Account Handover record is created for this account.</description>
    <inlineHelpText>Check box indicating if the account handover has been filled.</inlineHelpText>
    <label>Account Handover Created</label>
    <type>Checkbox</type>
</CustomField>