force-app/main/default/objects/Account/fields/Account_Id_case_insensitive__c.field-meta.xml
<CustomField>
    <fullName>Account_Id_case_insensitive__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Id (case-insensitive)</label>
    <type>Text</type>
</CustomField>