force-app/main/default/objects/Account/fields/Account_Industry__c.field-meta.xml
<CustomField>
    <fullName>Account_Industry__c</fullName>
    <description>Updated by a flow.  Copies the Goodfit Industry if not blank, otherwise copies Sub Industry.</description>
    <label>Account Industry</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>