force-app/main/default/objects/Account/fields/Account_Name_Platform__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_Platform__c</fullName>
    <label>Account Name (Platform)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>