force-app/main/default/objects/Account/fields/Account_Name_Zendesk__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_Zendesk__c</fullName>
    <formula>Account_Name_Platform__c &amp; &apos;#&apos; &amp; Platform_Customer_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name (Zendesk)</label>
    <type>Text</type>
</CustomField>