force-app/main/default/objects/Account/fields/Account_Owner_s_Manager__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_s_Manager__c</fullName>
    <formula>Owner.Manager.FirstName &amp; &quot; &quot; &amp; Owner.Manager.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner&apos;s Manager</label>
    <type>Text</type>
</CustomField>