force-app/main/default/objects/Account/fields/Account_Ownership__c.field-meta.xml
<CustomField>
    <fullName>Account_Ownership__c</fullName>
    <label>Account Ownership</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Oyster</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>