force-app/main/default/objects/Account/fields/Account_Plan_needed__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan_needed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to track for which accounts we need to have an account development plan filled in</description>
    <label>Account Plan needed</label>
    <type>Checkbox</type>
</CustomField>