force-app/main/default/objects/Account/fields/Account_Segment__c.field-meta.xml
<CustomField>
    <fullName>Account_Segment__c</fullName>
    <description>describes the sector or speciality</description>
    <label>Partner Segment</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Benefits</fullName>
            </value>
            <value>
                <fullName>Finance &amp; ERP</fullName>
            </value>
            <value>
                <fullName>Visa_&amp;_Relocation</fullName>
                <label>Visa &amp; Relocation</label>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
            <value>
                <fullName>Tools/Software</fullName>
            </value>
            <value>
                <fullName>PEO</fullName>
            </value>
            <value>
                <fullName>Payroll</fullName>
            </value>
            <value>
                <fullName>EOR</fullName>
            </value>
            <value>
                <fullName>Talent Acquisition Services</fullName>
            </value>
            <value>
                <fullName>Talent Acquisition Technology</fullName>
            </value>
            <value>
                <fullName>Compliance Services</fullName>
            </value>
            <value>
                <fullName>Consulting</fullName>
            </value>
            <value>
                <fullName>VC</fullName>
            </value>
            <value>
                <fullName>Incubator</fullName>
            </value>
            <value>
                <fullName>Accelerator</fullName>
            </value>
            <value>
                <fullName>Affiliate</fullName>
            </value>
            <value>
                <fullName>Social Impact</fullName>
            </value>
            <value>
                <fullName>Mission Driven</fullName>
            </value>
            <value>
                <fullName>OFR</fullName>
            </value>
            <value>
                <fullName>Future of Work</fullName>
            </value>
            <value>
                <fullName>Direct to Consumer</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Private Equity</fullName>
            </value>
            <value>
                <fullName>Community</fullName>
            </value>
            <value>
                <fullName>Consulting/Advisory</fullName>
                <isActive>false</isActive>
                <label>Consulting/Advisory</label>
            </value>
            <value>
                <fullName>HR Tech Stack</fullName>
                <isActive>false</isActive>
                <label>HR Tech Stack</label>
            </value>
            <value>
                <fullName>Recruitment</fullName>
                <isActive>false</isActive>
                <label>Recruitment</label>
            </value>
            <value>
                <fullName>Relocation</fullName>
                <isActive>false</isActive>
                <label>Relocation</label>
            </value>
            <value>
                <fullName>Startup Ecosystem</fullName>
                <isActive>false</isActive>
                <label>Startup Ecosystem</label>
            </value>
            <value>
                <fullName>TM Experiences</fullName>
                <isActive>false</isActive>
                <label>TM Experiences</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>