force-app/main/default/objects/Account/fields/Account_SubSegment__c.field-meta.xml
<CustomField>
    <fullName>Account_SubSegment__c</fullName>
    <description>describes the sector or speciality</description>
    <label>Partner SubSegment</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Account_Segment__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accelerator</fullName>
            </value>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>Accounting/Tax</fullName>
            </value>
            <value>
                <fullName>Affiliate</fullName>
            </value>
            <value>
                <fullName>Analytics</fullName>
            </value>
            <value>
                <fullName>ATS</fullName>
            </value>
            <value>
                <fullName>Benefits Brokers</fullName>
            </value>
            <value>
                <fullName>Credit Cards</fullName>
            </value>
            <value>
                <fullName>Culture &amp; Team Engagement</fullName>
            </value>
            <value>
                <fullName>Direct to Consumer</fullName>
            </value>
            <value>
                <fullName>EOR</fullName>
            </value>
            <value>
                <fullName>Equipment</fullName>
            </value>
            <value>
                <fullName>Equity</fullName>
            </value>
            <value>
                <fullName>ERP</fullName>
            </value>
            <value>
                <fullName>Expense Management</fullName>
            </value>
            <value>
                <fullName>Freelance/Contractor</fullName>
            </value>
            <value>
                <fullName>Future of Work</fullName>
            </value>
            <value>
                <fullName>Global System Integrator</fullName>
            </value>
            <value>
                <fullName>HR Consulting</fullName>
            </value>
            <value>
                <fullName>HRIS</fullName>
            </value>
            <value>
                <fullName>Incubator</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Job Boards</fullName>
            </value>
            <value>
                <fullName>Knowledge Management</fullName>
            </value>
            <value>
                <fullName>Learning &amp; Development</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Management Consulting</fullName>
            </value>
            <value>
                <fullName>Mission Driven</fullName>
            </value>
            <value>
                <fullName>OFR</fullName>
            </value>
            <value>
                <fullName>Payroll</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>