force-app/main/default/objects/Account/fields/Account_Tier__c.field-meta.xml
<CustomField>
    <fullName>Account_Tier__c</fullName>
    <description>This tiering will determine the level of attention given to the account by CSM and what additional resources will be put in place to grow the account, such as account management.</description>
    <inlineHelpText>Indicates tier for the account based on predefined criteria, automatically filled.</inlineHelpText>
    <label>Account Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tier 1</fullName>
            </value>
            <value>
                <fullName>Tier 2</fullName>
            </value>
            <value>
                <fullName>Tier 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>