force-app/main/default/objects/Account/fields/Active_Scale_Detail__c.field-meta.xml
<CustomField>
    <fullName>Active_Scale_Detail__c</fullName>
    <label>Active Scale Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>