force-app/main/default/objects/Account/fields/Actively_Worked__c.field-meta.xml
<CustomField>
    <fullName>Actively_Worked__c</fullName>
    <description>TRUE if Last Sales Activity is fewer than 45 days ago</description>
    <formula>OR(
    Future_Activity_Lock__c = TRUE,
    Last_Sales_Activity__c &gt;= (TODAY() - 45)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actively Worked</label>
    <type>Checkbox</type>
</CustomField>