force-app/main/default/objects/Account/fields/Added_to_Crossbeam_Reveal__c.field-meta.xml
<CustomField>
    <fullName>Added_to_Crossbeam_Reveal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Added to Crossbeam/Reveal</label>
    <type>Checkbox</type>
</CustomField>