force-app/main/default/objects/Account/fields/Added_to_Slack_connect__c.field-meta.xml
<CustomField>
    <fullName>Added_to_Slack_connect__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Added to Slack-connect</label>
    <type>Checkbox</type>
</CustomField>