force-app/main/default/objects/Account/fields/Addenda__c.field-meta.xml
<CustomField>
    <fullName>Addenda__c</fullName>
    <label>Addenda</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>