force-app/main/default/objects/Account/fields/Additional_Domain__c.field-meta.xml
<CustomField>
    <fullName>Additional_Domain__c</fullName>
    <description>Recognized supplementary email domain for the Account. Added manually or filled as a result of merging accounts.</description>
    <inlineHelpText>List any additional email domains used by the company that are not evident from the company name or primary domain.</inlineHelpText>
    <label>Additional Email Domain</label>
    <length>99</length>
    <type>Text</type>
</CustomField>