force-app/main/default/objects/Account/fields/Admin_Comment__c.field-meta.xml
<CustomField>
    <fullName>Admin_Comment__c</fullName>
    <label>Admin Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>