force-app/main/default/objects/Account/fields/AE_Account_Team_Members__c.field-meta.xml
<CustomField>
    <fullName>AE_Account_Team_Members__c</fullName>
    <description>Populated by DLRS</description>
    <label># AE Account Team Members</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>