force-app/main/default/objects/Account/fields/AE_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>AE_Recommendation__c</fullName>
    <description>Used by AE before handing over an account, to highlight the HL plan of the customer and if AM/CSM is recommended and why</description>
    <inlineHelpText>For AE to add Recommendation / Justification to assign an AM and/or CSM. Highlight the high level forecast in therms of TM pls.</inlineHelpText>
    <label>AE Recommendation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>