force-app/main/default/objects/Account/fields/AE_relationship__c.field-meta.xml
<CustomField>
    <fullName>AE_relationship__c</fullName>
    <label>AE relationship</label>
    <length>255</length>
    <type>Text</type>
</CustomField>