force-app/main/default/objects/Account/fields/Agreed_to_Act_as_a_Customer_Reference__c.field-meta.xml
<CustomField>
    <fullName>Agreed_to_Act_as_a_Customer_Reference__c</fullName>
    <label>Agreed to Act as a Customer Reference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unsure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>