force-app/main/default/objects/Account/fields/Agreement_signed__c.field-meta.xml
<CustomField>
    <fullName>Agreement_signed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agreement signed</label>
    <type>Checkbox</type>
</CustomField>