force-app/main/default/objects/Account/fields/Agreement_type__c.field-meta.xml
<CustomField>
    <fullName>Agreement_type__c</fullName>
    <label>Agreement type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Mutual Referral</fullName>
            </value>
            <value>
                <fullName>MNDA</fullName>
            </value>
            <value>
                <fullName>Co-marketing</fullName>
            </value>
            <value>
                <fullName>Integration</fullName>
            </value>
            <value>
                <fullName>Distribution</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Revenue share</fullName>
                <isActive>false</isActive>
                <label>Revenue share</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>