force-app/main/default/objects/Account/fields/AM__c.field-meta.xml
<CustomField>
    <fullName>AM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account manager name - assigned post handover from AE for T1 and T2 accounts</description>
    <inlineHelpText>Indicates the Account Manager assigned to the account.</inlineHelpText>
    <label>AM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>