force-app/main/default/objects/Account/fields/AM_Needed__c.field-meta.xml
<CustomField>
    <fullName>AM_Needed__c</fullName>
    <description>Used in Account Tier Update flow</description>
    <label>AM Needed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>