force-app/main/default/objects/Account/fields/AMER_State_Region_Billing__c.field-meta.xml
<CustomField>
    <fullName>AMER_State_Region_Billing__c</fullName>
    <description>New AMER region based on Billing State</description>
    <formula>IF(NOT(ISBLANK(BillingState)),
    IF(CONTAINS($Label.Subregion_AMER_Pacific_Northwest,BillingState + &quot;;&quot;),&quot;AMER - Pacific Northwest&quot;,
        IF(BillingState = &quot;California&quot; || BillingState = &quot;CA&quot;,&quot;AMER - California&quot;,
            IF(CONTAINS($Label.Subregion_AMER_Mountain_West,BillingState + &quot;;&quot;),&quot;AMER - Mountain West&quot;,
                IF(CONTAINS($Label.Subregion_AMER_Southwest,BillingState + &quot;;&quot;),&quot;AMER - Southwest&quot;,
                    IF(CONTAINS($Label.Subregion_AMER_Midwest,BillingState + &quot;;&quot;),&quot;AMER - Midwest&quot;,
                        IF(CONTAINS($Label.Subregion_AMER_Southeast,BillingState + &quot;;&quot;),&quot;AMER - Southeast&quot;,
                            IF(CONTAINS($Label.Subregion_AMER_Mid_Atlantic,BillingState + &quot;;&quot;),&quot;AMER - Mid Atlantic&quot;,
                                IF(CONTAINS($Label.Subregion_AMER_Northeast,BillingState + &quot;;&quot;),&quot;AMER - Northeast&quot;,
                                    CASE(BillingState,
                                    &quot;NY&quot;,&quot;AMER - New York&quot;,
                                    &quot;New York&quot;,&quot;AMER - New York&quot;,
                                    &quot;NJ&quot;,&quot;AMER - Northeast&quot;,
                                    &quot;New Jersey&quot;,&quot;AMER - Northeast&quot;,
                                    &quot;PA&quot;,&quot;AMER - New York&quot;,
                                    &quot;Pennsylvania&quot;,&quot;AMER - Northeast&quot;,
                                    &quot;Puerto Rico&quot;,&quot;AMER - N/A&quot;,
                                    &quot;&quot;)
                                )
                            )
                        )
                    )
                )
            )
        )
    ),
    &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AMER State Region (Billing)</label>
    <type>Text</type>
</CustomField>