force-app/main/default/objects/Account/fields/AMER_State_Region_HQ__c.field-meta.xml
<CustomField>
    <fullName>AMER_State_Region_HQ__c</fullName>
    <description>New AMER region based on State HQ</description>
    <formula>IF(NOT(ISBLANK(TEXT(State_HQ__c))),
    IF(CONTAINS($Label.Subregion_AMER_Pacific_Northwest,TEXT(State_HQ__c) + &quot;;&quot;),&quot;AMER - Pacific Northwest&quot;,
        IF(TEXT(State_HQ__c) = &quot;California&quot; || TEXT(State_HQ__c) = &quot;CA&quot;,&quot;AMER - California&quot;,
            IF(CONTAINS($Label.Subregion_AMER_Mountain_West,TEXT(State_HQ__c) + &quot;;&quot;),&quot;AMER - Mountain West&quot;,
                IF(CONTAINS($Label.Subregion_AMER_Southwest,TEXT(State_HQ__c) + &quot;;&quot;),&quot;AMER - Southwest&quot;,
                    IF(CONTAINS($Label.Subregion_AMER_Midwest,TEXT(State_HQ__c) + &quot;;&quot;),&quot;AMER - Midwest&quot;,
                        IF(CONTAINS($Label.Subregion_AMER_Southeast,TEXT(State_HQ__c) + &quot;;&quot;),&quot;AMER - Southeast&quot;,
                            IF(CONTAINS($Label.Subregion_AMER_Mid_Atlantic,TEXT(State_HQ__c) + &quot;;&quot;),&quot;AMER - Mid Atlantic&quot;,
                                IF(CONTAINS($Label.Subregion_AMER_Northeast,TEXT(State_HQ__c) + &quot;;&quot;),&quot;AMER - Northeast&quot;,
                                    CASE(State_HQ__c,
                                    &quot;NY&quot;,&quot;AMER - New York&quot;,
                                    &quot;New York&quot;,&quot;AMER - New York&quot;,
                                    &quot;NJ&quot;,&quot;AMER - Northeast&quot;,
                                    &quot;New Jersey&quot;,&quot;AMER - Northeast&quot;,
                                    &quot;PA&quot;,&quot;AMER - New York&quot;,
                                    &quot;Pennsylvania&quot;,&quot;AMER - Northeast&quot;,
                                    &quot;Puerto Rico&quot;,&quot;AMER - N/A&quot;,
                                    &quot;&quot;)
                                )
                            )
                        )
                    )
                )
            )
        )
    ),
    &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AMER State Region (HQ)</label>
    <type>Text</type>
</CustomField>