force-app/main/default/objects/Account/fields/Assign_to_AM__c.field-meta.xml
<CustomField>
    <fullName>Assign_to_AM__c</fullName>
    <description>Name of the account manager.</description>
    <label>Assign to (AM)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>