force-app/main/default/objects/Account/fields/assigned_complex_AE__c.field-meta.xml
<CustomField>
    <fullName>assigned_complex_AE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>assigned complex AE</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>