force-app/main/default/objects/Account/fields/assigned_non_complex_AE__c.field-meta.xml
<CustomField>
    <fullName>assigned_non_complex_AE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>assigned non-complex AE</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts3</relationshipName>
    <type>Lookup</type>
</CustomField>