force-app/main/default/objects/Account/fields/ATS__c.field-meta.xml
<CustomField>
    <fullName>ATS__c</fullName>
    <inlineHelpText>Specify the ATS software the customer is currently using.</inlineHelpText>
    <label>ATS</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Workable</fullName>
            </value>
            <value>
                <fullName>Greenhouse</fullName>
            </value>
            <value>
                <fullName>Lever</fullName>
            </value>
            <value>
                <fullName>Team Tailor</fullName>
            </value>
            <value>
                <fullName>Breezy</fullName>
            </value>
            <value>
                <fullName>Recruitee</fullName>
            </value>
            <value>
                <fullName>Jobvite</fullName>
            </value>
            <value>
                <fullName>Smart Recruiters</fullName>
            </value>
            <value>
                <fullName>Jazz HR</fullName>
            </value>
            <value>
                <fullName>Workday</fullName>
            </value>
            <value>
                <fullName>Oracle HCM</fullName>
            </value>
            <value>
                <fullName>SAP SuccessFactors</fullName>
            </value>
            <value>
                <fullName>ADP Workforce Now</fullName>
            </value>
            <value>
                <fullName>Don&apos;t know</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Ashby</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>