force-app/main/default/objects/Account/fields/Automate_BP_Enrichment__c.field-meta.xml
<CustomField>
    <fullName>Automate_BP_Enrichment__c</fullName>
    <description>MOps managed field used for automation only.</description>
    <inlineHelpText>MOps managed field used for automation only.</inlineHelpText>
    <label>Automate BP Enrichment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>P1 - Call Cadence (Clay)</fullName>
            </value>
            <value>
                <fullName>P2 - No Call Cadence (Clay)</fullName>
            </value>
            <value>
                <fullName>Clay G2 P1 Cadence Auto-Enrolled</fullName>
                <isActive>false</isActive>
                <label>Clay G2 P1 Cadence Auto-Enrolled</label>
            </value>
            <value>
                <fullName>Clay G2 P2 Cadence Auto-Enrolled</fullName>
                <isActive>false</isActive>
                <label>Clay G2 P2 Cadence Auto-Enrolled</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>