force-app/main/default/objects/Account/fields/Average_CSAT_Score__c.field-meta.xml
<CustomField>
    <fullName>Average_CSAT_Score__c</fullName>
    <description>Calculated by DLRS.  The average CSAT score from all related contacts.</description>
    <label>Average CSAT Score</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>