force-app/main/default/objects/Account/fields/Average_Sales_Activities_per_Contact_in__c.field-meta.xml
<CustomField>
    <fullName>Average_Sales_Activities_per_Contact_in__c</fullName>
    <formula>IF(
Contacts_Touched_in_Last_90_Days__c &lt;&gt; 0,
Sales_Activities_in_Last_90_Days__c / Contacts_Touched_in_Last_90_Days__c,
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Avg Sales Activities/Contact 90 Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>