force-app/main/default/objects/Account/fields/BDR_Account_Team_Members__c.field-meta.xml
<CustomField>
    <fullName>BDR_Account_Team_Members__c</fullName>
    <description>Populated by DLRS</description>
    <label># BDR Account Team Members</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>