force-app/main/default/objects/Account/fields/BDR_MM__c.field-meta.xml
<CustomField>
    <fullName>BDR_MM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BDR MM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts5</relationshipName>
    <type>Lookup</type>
</CustomField>