force-app/main/default/objects/Account/fields/BDR_Owner__c.field-meta.xml
<CustomField>
    <fullName>BDR_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Active BDR in the Account, field is necessary to allow a comprehensive Account-based approach to routing of any new leads. Separate field for BDR enables follow up withing AE owned account. Set by Insycle/LeanData routing or manually.</description>
    <label>BDR Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>BDR_Team</relationshipName>
    <type>Lookup</type>
</CustomField>