force-app/main/default/objects/Account/fields/BDR_SMB__c.field-meta.xml
<CustomField>
    <fullName>BDR_SMB__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BDR SMB</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts6</relationshipName>
    <type>Lookup</type>
</CustomField>