force-app/main/default/objects/Account/fields/Business_Type__c.field-meta.xml
<CustomField>
    <fullName>Business_Type__c</fullName>
    <formula>IF(
    OR(
        CONTAINS(Owner.UserRole.Name,&quot;BDR&quot;),
        CONTAINS(Owner.UserRole.Name,&quot;AE&quot;)
    ),
    &quot;New Business&quot;,
    IF(
        CONTAINS(Owner.UserRole.Name,&quot;Account&quot;),
        &quot;Existing Business&quot;,
        &quot;&quot;
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ZZZ_Business Type</label>
    <type>Text</type>
</CustomField>