force-app/main/default/objects/Account/fields/Buyer_Persona_Import_Ready__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Persona_Import_Ready__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ready to trigger Buyer Persona Import</description>
    <inlineHelpText>Ready to trigger Buyer Persona Import</inlineHelpText>
    <label>Buyer Persona Import Ready</label>
    <type>Checkbox</type>
</CustomField>