force-app/main/default/objects/Account/fields/Care_Impact_Account_Health__c.field-meta.xml
<CustomField>
    <fullName>Care_Impact_Account_Health__c</fullName>
    <description>tickets breached SLA for Care BU</description>
    <label>Care Impact Account Health</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>