force-app/main/default/objects/Account/fields/cARR__c.field-meta.xml
<CustomField>
    <fullName>cARR__c</fullName>
    <description>This field is used to store the information from Looker</description>
    <inlineHelpText>Info updated from Looker, monthly</inlineHelpText>
    <label>cARR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>