force-app/main/default/objects/Account/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>describes the ‘kind’ or ‘type’ of partner</description>
    <label>Partner Program</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PEO/Payroll</fullName>
            </value>
            <value>
                <fullName>Talent</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
            <value>
                <fullName>Venture</fullName>
            </value>
            <value>
                <fullName>Affiliate</fullName>
            </value>
            <value>
                <fullName>Industry Organization</fullName>
            </value>
            <value>
                <fullName>Direct to Consumer</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Capital</fullName>
            </value>
            <value>
                <fullName>Integrations</fullName>
            </value>
            <value>
                <fullName>Worktech</fullName>
            </value>
            <value>
                <fullName>Community</fullName>
            </value>
            <value>
                <fullName>Integration/Product</fullName>
                <isActive>false</isActive>
                <label>Integration/Product</label>
            </value>
            <value>
                <fullName>Marketing</fullName>
                <isActive>false</isActive>
                <label>Marketing</label>
            </value>
            <value>
                <fullName>Work Tech</fullName>
                <isActive>false</isActive>
                <label>Work Tech</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>